# movie-chooser

./: .gitignore  README.md  functional_tests.py  manage.py  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
moviechooser/accounts/: apps.py  decorators.py  urls.py  views.py
moviechooser/chooser/: apps.py  forms.py  models.py  urls.py  views.py
moviechooser/chooser/migrations/: 0001_initial.py  0002_moviechoice_runtime.py  0003_delete_moviechoice.py
moviechooser/chooser/tests/: test_models.py  test_views.py
moviechooser/lists/: apps.py  models.py  urls.py  views.py
moviechooser/lists/migrations/: 0001_initial.py  0002_auto_20210319_1340.py  0003_auto_20210320_1812.py  0004_auto_20210323_2004.py  0005_item_user.py  0006_auto_20210327_2011.py  0007_auto_20210328_1053.py
moviechooser/lists/tests/: test_models.py  test_views.py
moviechooser/static/css/: base.css
moviechooser/static/js/: base.js
moviechooser/templates/: base.html  detail_page.html  homepage.html  index.html  library.html  login.html  logout.html  movie_card.html  movie_detail.html  my_list.html  navbar.html  pagination.html  register.html  results.html  search_results.html  surprise.html
moviechooser_project/config/: asgi.py  settings.py  urls.py  wsgi.py
