[tool.poetry]
name = "movie-chooser"
version = "0.1.0"
description = "A web app using Django to make movie suggestions"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mattyocode/movie-chooser"
repository = "https://github.com/mattyocode/movie-chooser"
authors = ["mattyocode <matthewoliver@live.co.uk>"]
keywords = ["movies"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
psycopg2-binary = "^2.8.6"
python-dotenv = "^0.15.0"
django-filter = "^2.4.0"
django-storages = "^1.11.1"
boto3 = "^1.16.56"

[tool.poetry.dev-dependencies]
selenium = "^3.141.0"
coverage = {version = "^5.3.1", extras = ["toml"]}

[tool.coverage.paths]
source = ["moviechooser", "*/site-packages"]

[tool.coverage.run]
branch = true
include = ["moviechooser/*"]


[tool.coverage.report]
show_missing = true
fail_under = 100


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
